--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Playfair Display", serif;
   padding: 20px 60px;
 }
 
