--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -9,10 +9,12 @@
   background-color: black;
   color: white;
   text-transform: uppercase;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display';
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 
   &:hover {
     background-color: white;
@@ -21,8 +23,24 @@
   }
 
   &.google-sign-in {
-    background: #4285f4;
+    background-color: #4285f4;
     color: white;
-    border: none;
+
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
   }
 }
